--- a/package.json
+++ b/package.json
@@ -3,25 +3,52 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "DB_TYPE=sqlite npm run dev:general",
+    "dev:pg": "DB_TYPE=pgsql npm run dev:general",
+    "dev:mysql": "DB_TYPE=mysql npm run dev:general",
+    "dev:general": "npm run db:deploy && npm run db:generate && next dev",
+    "build": "DB_TYPE=pgsql npm run db:generate && DB_TYPE=pgsql npm run db:deploy && next build && npm run build:widget",
+    "build:without-migrate": "npm run db:generate && next build && npm run build:widget",
+    "db:deploy": "prisma migrate deploy --schema ./prisma/$DB_TYPE/schema.prisma",
+    "db:generate": "prisma generate --schema ./prisma/$DB_TYPE/schema.prisma",
+    "db:push": "DB_TYPE=sqlite npm run db:push:general",
+    "db:push:pg": "DB_TYPE=pgsql npm run db:push:general",
+    "db:push:mysql": "DB_TYPE=mysql npm run db:push:general",
+    "db:push:general": "prisma db push --schema ./prisma/$DB_TYPE/schema.prisma",
+    "db:migrate": "prisma migrate dev --schema ./prisma/$DB_TYPE/schema.prisma",
+    "db:migrateAll": "prisma migrate dev --schema ./prisma/sqlite/schema.prisma && prisma migrate dev --schema ./prisma/pgsql/schema.prisma && prisma migrate dev --schema ./prisma/mysql/schema.prisma",
+    "admin": "prisma studio",
+    "widget": "vite --config scripts/vite.config.js",
+    "start": "next start -p 3000",
+    "start:with-migrate": "npm run db:generate && npm run db:deploy && next start -p 3000",
+    "cp-widget-lang": "mkdir -p public/js/widget/lang && cp -r widget/lang public/js/widget",
+    "build:widget": "npm run cp-widget-lang && vite build --config scripts/vite.widget.config.js && npm run build:sdk && npm run build:iframe && npm run build:count",
+    "build:sdk": "vite build --config scripts/vite.sdk.config.js",
+    "build:iframe": "vite build --config scripts/vite.iframe.config.js",
+    "build:count": "vite build --config scripts/vite.count.config.js"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.6.0",
+    "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
+    "framer-motion": "^10.16.12",
+    "next": "14.0.3",
+    "next-connect": "^1.0.0",
+    "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "typescript": "^5"
   }
 }
